[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stage/FoodParent.gd" type="Script" id=1]
[ext_resource path="res://Art/Healhty/Cabbage.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 400, 400 )

[sub_resource type="Animation" id=2]

resource_name = "CrushFood"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionBox/FoodSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1.0067e-05 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBox/FoodSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 30.0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "SlashFood"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionBox/FoodSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBox/FoodSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -400, -150 ) ]
}

[node name="FoodBase" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true
one_way_collision = true

[node name="FoodSprite" type="Sprite" parent="CollisionBox"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/CrushFood = SubResource( 2 )
anims/SlashFood = SubResource( 3 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
